--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -26,7 +26,7 @@
 
       <div class="member-splitter"></div>
 
-      <div>
+      <div class="setting-page-action">
 	<h4 class="setting-page-action-title">他没有收到邀请邮件?</h4>
 	<span class="setting-page-action-summary">如果 <%= @user_name %> 没有收到邀请邮件，请点击下面按钮重新发送激活邮件：</span>
 	<div>
