--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -133,6 +133,23 @@ $action-button-focus-color: #F13A3E;
     }
 }
 
+@mixin textarea-mixin($height, $margin-left: 0px, $rows: -1) {
+    padding: 10px;
+    resize: none;
+    width: 550px;
+
+    @if $rows == -1 {
+	height: $height;
+    } @else {
+	rows: $rows;
+    }
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: $margin-left;
+    border: $button-border;
+    border-radius: $button-radius;
+}
+
 .link-button {
     @include text-link-button-mixin(14px)
 }
@@ -317,14 +334,7 @@ li {
 }
 
 .mission-edit-textarea {
-    resize: none;
-    width: 550px;
-    height: 150px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 40px;
-    border: $button-border;
-    border-radius: $button-radius;
+    @include textarea-mixin(150px, 40px);
 }
 
 .form-control:focus {
@@ -861,6 +871,10 @@ li {
 }
 
 .mission-edit-submit-button {
+    @include submit-button-mixin(40px);
+}
+
+.comment-edit-submit-button {
     @include submit-button-mixin(10px);
 }
 
@@ -1170,17 +1184,7 @@ input[type="checkbox"]:disabled + label::before {
 }
 
 .mission-comment-textarea {
-    resize: none;
-    rows: 1;
-    width: 550px;
-    margin-top: 10px;
-    margin-left: 10px;
-    border: $button-border;
-    border-radius: $button-radius;
-}
-
-textarea {
-    padding: 10px;
+    @include textarea-mixin(150px, 10px, 1);
 }
 
 .mission-comment-submit-button {
@@ -1311,14 +1315,7 @@ textarea {
 }
 
 .comment-edit-textarea {
-    resize: none;
-    width: 550px;
-    height: 150px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border: $button-border;
-    border-radius: $button-radius;
+    @include textarea-mixin(150px, 10px);
 }
 
 .member-title {
