Refacotry: use splitter-mixin remove duplicate code.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -24,7 +24,7 @@
 	</div>
       </div>
 
-      <div class="member-splitter"></div>
+      <div class="splitter"></div>
 
       <div class="setting-page-action">
 	<h4 class="setting-page-action-title">他没有收到邀请邮件?</h4>
