--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -197,6 +197,12 @@ $action-button-focus-color: #F13A3E;
     }
 }
 
+@mixin splitter-mixin($background: #eee, $height: 1px, $width: 100%) {
+    background: $background;
+    width: $width;
+    height: $height;
+}
+
 .link-button {
     @include text-link-button-mixin(14px)
 }
@@ -446,9 +452,12 @@ li {
 }
 
 .project-splitter {
-    background: linear-gradient($project-splitter-color 50%, white 50%, white 90%, $project-splitter-color 90%);
-    width: 100%;
-    height: 10px;
+    @include splitter-mixin(
+	linear-gradient($project-splitter-color 50%, white 50%, white 90%, $project-splitter-color 90%),
+	10px,
+	100%
+    );
+
     margin-bottom: 30px;
 }
 
@@ -1243,9 +1252,7 @@ input[type="checkbox"]:disabled + label::before {
 }
 
 .mission-comment-splitter {
-    background: #eee;
-    width: 75%;
-    height: 1px;
+    @include splitter-mixin(#eee, 1px, 75%);
 }
 
 .mission-comment {
@@ -1501,15 +1508,7 @@ input[type="checkbox"]:disabled + label::before {
 }
 
 .splitter {
-    background: #eee;
-    width: 100%;
-    height: 1px;
-}
-
-.member-splitter {
-    background: #eee;
-    width: 100%;
-    height: 1px;
+    @include splitter-mixin
 }
 
 .setting-page-delete-link {
