--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -17,7 +17,7 @@
       <ul class="invite-email-list">
         <li class="invite-email-item">
           <input type="email"
-                 class="invite-edit-input"
+                 class="edit-input"
                  placeholder="请输入新成员的邮箱"
 		 autofocus="true">
           <select>
@@ -27,7 +27,7 @@
         </li>
         <li class="invite-email-item">
           <input type="email"
-                 class="invite-edit-input"
+                 class="edit-input"
                  placeholder="请输入新成员的邮箱">
           <select>
             <option value="member">成员</option>
@@ -36,7 +36,7 @@
         </li>
         <li class="invite-email-item">
           <input type="email"
-                 class="invite-edit-input"
+                 class="edit-input"
                  placeholder="请输入新成员的邮箱">
           <select>
             <option value="member">成员</option>
