--- a/app/views/mission_lists/_create_mission_list.html.erb
+++ b/app/views/mission_lists/_create_mission_list.html.erb
@@ -7,6 +7,7 @@
         <input type="text"
                class="mission-save-input"
                placeholder="请输入任务清单名称"
+	       autofocus="true"
 	       data-action="keydown->mission#enterEditMissionList">
       </div>
       <div>
