--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -91,7 +91,7 @@
           <div class="flex-vcenter">
             <label class="mission-edit-rectangle"></label>
             <input type="text"
-                   class="mission-page-edit-input"
+                   class="edit-input"
                    placeholder="新的任务"
                    data-action="keydown->mission#enterMissionPageEdit">
             <button type="button" class="btn mission-distributor">未指派</button>
