--- a/app/views/mission_lists/_mission_edit_form.html.erb
+++ b/app/views/mission_lists/_mission_edit_form.html.erb
@@ -4,7 +4,7 @@
     <div class="flex-vcenter">
       <label class="mission-edit-rectangle"></label>
       <input type="text"
-             class="mission-edit-input"
+             class="edit-input"
              placeholder="新的任务"
              data-action="keydown->mission#enterMissionEdit">
       <button type="button" class="btn mission-distributor">未指派</button>
