--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,9 +15,9 @@
   <div class="top-header-blank"></div>
   <form class="navbar-form" role="search">
     <div class="input-group input-group-sm mb-3 top-search-bar-group">
-      <input type="text" class="form-control top-search-bar-input" placeholder="搜索任务">
+      <input type="text" class="form-control fill-background-color" placeholder="搜索任务">
       <div class="input-group-btn">
-        <button class="btn btn-default top-search-bar-button" type="submit">
+        <button class="btn btn-default fill-background-color" type="submit">
           <span class="glyphicon glyphicon-search top-search-bar-icon"></span>
         </button>
       </div>
