--- a/app/views/mission_lists/show.html.erb
+++ b/app/views/mission_lists/show.html.erb
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
+  <body class="fill-background-color" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render "layouts/loading_dialog", message: "正在删除任务列表..." %>
     <%= render "layouts/mission_toolbar" %>
     <%= render 'layouts/header' %>
