--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body class="content-page-body"
+  <body class="fill-background-color"
         id="<%= controller.controller_name %>-<%= controller.action_name %>">
 
     <div class="background-eventarea"
