--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
+  <body class="fill-background-color" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
     <div class="board-box min-board-height">
 
