--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -818,7 +818,7 @@ li {
     color: $logo-color;
 }
 
-.mission-new-rectangle {
+.mission-input-line {
     background-color: #eee;
     width: 20px;
     height: 20px;
@@ -843,16 +843,6 @@ li {
 
 .mission-edit-form {
     margin-top: 10px;
-}
-
-.mission-edit-rectangle {
-    background-color: #eee;
-    width: 20px;
-    height: 20px;
-    margin-top: 4px;
-    margin-left: 10px;
-    border: 1px solid #eee;
-    border-radius: 5px;
 }
 
 .edit-input {
