--- a/app/views/mission_lists/_mission_new_form.html.erb
+++ b/app/views/mission_lists/_mission_new_form.html.erb
@@ -2,7 +2,7 @@
   <div class="mission-new-form"
        data-target="mission.missionNewForm">
     <div class="flex-vcenter">
-      <label class="mission-new-rectangle"></label>
+      <label class="mission-input-line"></label>
       <input type="text"
              class="edit-input"
              placeholder="新的任务"
