--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -15,7 +15,7 @@
       <%= form_for(:project, url: team_projects_path) do |f| %>
 	<div class="form-title">创建新项目</div>
         <p><%= f.text_field :name, class: "form-control", placeholder: "项目名称", autofocus: true %></p>
-        <p><%= f.text_area :summary, rows: "5", class: "form-control remove-textarea-resize-button", placeholder: "简单描述项目, 便于其他人理解 (选填)" %></p>
+        <p><%= f.text_area :summary, rows: "5", class: "form-control", placeholder: "简单描述项目, 便于其他人理解 (选填)" %></p>
 	<div class="flex-vcenter margin-top-normal">
           <%= f.submit "创建", class: "btn btn-primary btn-xs submit-button-width" %>
           <%= link_to "取消", team_projects_path, :class => "link-button-big margin-left-normal" %>
