Refacotry: use margin-vertical-mixin remove duplicate code.

--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -15,7 +15,7 @@
          data-controller="member">
       <h3 class="invite-title">添加新成员</h3>
       <ul class="invite-email-list">
-        <li class="invite-email-item">
+        <li class="margin-vertical-15px">
           <input type="email"
                  class="edit-input"
                  placeholder="请输入新成员的邮箱"
@@ -25,7 +25,7 @@
             <option value="admin">管理员</option>
           </select>
         </li>
-        <li class="invite-email-item">
+        <li class="margin-vertical-15px">
           <input type="email"
                  class="edit-input"
                  placeholder="请输入新成员的邮箱">
@@ -34,7 +34,7 @@
             <option value="admin">管理员</option>
           </select>
         </li>
-        <li class="invite-email-item">
+        <li class="margin-vertical-15px">
           <input type="email"
                  class="edit-input"
                  placeholder="请输入新成员的邮箱">
