--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -207,6 +207,11 @@ $phone-page-top-bar-height: 54px;
     margin-left: $margin-left;
 }
 
+@mixin margin-vertical-mixin($margin) {
+    margin-top: $margin;
+    margin-bottom: $margin;
+}
+
 .link-button {
     @include text-link-button-mixin(14px)
 }
@@ -228,18 +233,12 @@ $phone-page-top-bar-height: 54px;
 }
 
 .sign-button-vertical-margins {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    @include margin-vertical-mixin(5px);
 }
 
 .margins-horizontal-normal {
     margin-left: 15px;
     margin-right: 15px;
-}
-
-.margins-vertical-normal {
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
 
 .margin-bottom-normal {
@@ -564,9 +563,9 @@ $phone-page-top-bar-height: 54px;
 .mission {
     font-size: 14px;
     font-weight: 350;
-    margin-top: 10px;
-    margin-bottom: 10px;
     margin-left: 5px;
+
+    @include margin-vertical-mixin(10px);
 }
 
 .mission-distributor {
@@ -939,8 +938,7 @@ input[type="checkbox"]:disabled + label::before {
 
 .setting-page-action-summary {
     color: #666;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    @include margin-vertical-mixin(10px);
 }
 
 .setting-page-delete-button {
@@ -1023,8 +1021,7 @@ input[type="checkbox"]:disabled + label::before {
 }
 
 .mission-comment {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    @include margin-vertical-mixin(30px);
     overflow: hidden;           // make parent div expand height when have 'float' child div in it
 }
 
@@ -1165,9 +1162,8 @@ input[type="checkbox"]:disabled + label::before {
     color: $logo-color;
 }
 
-.invite-email-item {
-    margin-top: 15px;
-    margin-bottom: 15px;
+.margin-vertical-15px {
+    @include margin-vertical-mixin(15px);
 }
 
 .invite-title {
@@ -1205,11 +1201,6 @@ input[type="checkbox"]:disabled + label::before {
     color: #666;
     width: 200px;
     margin-left: 5px;
-}
-
-.setting-item {
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
 
 .setting-icon {
@@ -1335,9 +1326,9 @@ input[type="checkbox"]:disabled + label::before {
 .phone-input-group {
     background-color: #fff;
     height: 50px;
-    margin-top: 5px;
-    margin-bottom: 5px;
     border: 1px solid rgba(0, 0, 0, 0.05);
+
+    @include margin-vertical-mixin(5px);
 }
 
 .phone-input-title {
