Refacotry name and remove duplicate css code.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_pack_tag "application" %>
 
-<div class="background-eventarea"
+<div class="menu-eventarea"
      data-controller="header"
      data-action="click@window->header#onClick">
 </div>
