--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -5,7 +5,7 @@
   <body class="fill-background-color"
         id="<%= controller.controller_name %>-<%= controller.action_name %>">
 
-    <div class="background-eventarea"
+    <div class="menu-eventarea"
          data-controller="comment"
          data-action="click@window->comment#onClick">
     </div>
