--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -584,18 +584,12 @@ $phone-page-top-bar-height: 54px;
 }
 
 .right-float-menu-normal-button {
-    color: $right-menu-normal-button-normal-color;
-    margin-left: 16px;
-}
-
-.right-float-menu-normal-button:hover {
-    color: $right-menu-normal-button-hover-color;
-}
-
-.right-float-menu-normal-button:focus {
-    color: $right-menu-normal-button-focus-color;
-    border: none;
-    outline: none;
+    @include text-link-button-mixin(
+	14px,
+	16px,
+	$right-menu-normal-button-normal-color,
+	$right-menu-normal-button-hover-color,
+	$right-menu-normal-button-focus-color);
 }
 
 .right-float-menu-delete-button {
@@ -1055,7 +1049,7 @@ input[type="checkbox"]:disabled + label::before {
     text-decoration: none;
 }
 
-.background-eventarea {
+.menu-eventarea {
     position: absolute;
     width: 100%;
     height: 100%;
