--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -126,7 +126,7 @@
                class="mission-title">
           <span
               id=<%= @mission.hashid %>
-              class="mission-title-link h4">
+              class="mission-big-title-link">
             <%= @mission.name %>
           </span>
         </label>
